2019/k8s/ingress/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /hello
        backend:
          serviceName: nginx-service
          servicePort: 80
      - path: /
        backend:
          serviceName: myweb
          servicePort: 8080
